# anthill

./: .gitignore
backend/: main.py  pyproject.toml
backend/agents/: __init__.py  add_comment.py  agentmail_client.py  bridge_client.py  citation_inserter.py  ground_citation.py  ingest.py  insert_citation.py  literature_search.py  nia_cache.py  nia_client.py  review_response.py  routes.py  store.py  suggest_edit.py  summarize_selection.py  tracing.py  types.py
backend/scripts/: show_run.py  test_citation_inserter.py  test_review_response.py  watch_inbox.py
collab/: .env.example  AGENT_PROMPT.md  package.json  tsconfig.json
collab/scripts/: cleanup-doc.ts  dump-doc.ts  seed-example-paper.ts
collab/src/: agent-bridge.ts  agent-ops.ts  auth.ts  idempotency.ts  plate-yjs.ts  revision.ts  server.ts  types.ts
collab/test/: bridge-http.test.ts  bridge.test.ts
datasets/: .gitignore  pyproject.toml
datasets/src/: embed.py  main.py  pdf.py  read_paper.py
supabase/: config.toml
supabase/migrations/: 20260425000001_create_documents.sql  20260425000002_documents_plate_content.sql  20260425000003_documents_yjs_state.sql
web/: .env.local.example  components.json  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: agent-run-detail.tsx  agents-panel.tsx  app-sidebar.tsx  connect-agent-button.tsx  dashboard-header.tsx  document-editor.tsx  documents-list.tsx  login-form.tsx  nav-main.tsx  nav-user.tsx  search-demo.tsx  search-panel.tsx  sign-up-form.tsx  surface-hero.tsx  team-switcher.tsx  trpc-provider.tsx  (+1 more)
(+63 files in other folders)
