[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.0",
    "chromadb>=1.5.5",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "llama-cpp-python>=0.3.20",
    "numpy>=2.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.2",
    "uvicorn[standard]>=0.46.0",
]
