[project]
name = "datasets"
version = "0.1.0"
description = "arXiv paper fetching, PDF extraction, and semantic embedding pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.0",
    "chromadb>=1.5.5",
    "llama-cpp-python>=0.3.20",
    "pymupdf>=1.27.2.2",
    "requests>=2.32.0",
]
